# drawtk

./: AUTHORS  ChangeLog  DEPENDENCIES  Makefile.am  NEWS  README  autogen.sh  configure.ac  project.config
debian/: changelog  control  copyright  libdrawtk0-dev.examples  libdrawtk0-dev.install  libdrawtk0.install  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  symbols
doc/: Makefile.am  doxygen.cfg  dtk_addtime.3  dtk_bgcolor.3  dtk_clear_screen.3  dtk_close.3  dtk_create_arrow.3  dtk_create_circle.3  dtk_create_circle_str.3  dtk_create_complex_shape.3  dtk_create_composite_shape.3  dtk_create_cross.3  dtk_create_image.3  dtk_create_line.3  dtk_create_rectangle_2p.3  dtk_create_rectangle_hw.3  dtk_create_shape.3  dtk_create_string.3  dtk_create_triangle.3  dtk_create_window.3  dtk_destroy_font.3  dtk_destroy_shape.3  dtk_destroy_texture.3  dtk_difftime_ms.3  dtk_difftime_ns.3  dtk_difftime_s.3  dtk_draw_shape.3  dtk_get_color.3  dtk_gettime.3  dtk_load_font.3  dtk_load_image.3  dtk_load_video_file.3  dtk_load_video_gst.3  dtk_load_video_tcp.3  dtk_load_video_test.3  dtk_load_video_udp.3  dtk_make_current_window.3  dtk_move_shape.3  dtk_nanosleep.3  dtk_process_events.3  (+8 more)
doc/examples/: Makefile  bars.c  bounce.c  errormon.c
examples/: Makefile.am  colortest.c  develtest.c
lib/: clock_gettime.c  clock_gettime.h  clock_nanosleep.c  clock_nanosleep.h  convfiletime.h  timespec.h
m4/: pkg-custom.m4
src/: Makefile.am  Makefile.in  colors.c  create_shape.c  drawtk.h  drawtk.pc.in  dtk_colors.h  dtk_event.h  dtk_gstreamer.c  dtk_gstreamer.h  dtk_time.h  dtk_video.h  dtk_video_custom.h  events.c  exports.sym  fb_event.h  feedback.h  fonttex.c  fonttex.h  imagetex.c  imagetex.h  palette.c  palette.h  shapes.c  shapes.h  texmanager.c  texmanager.h  time.c  video.c  video_custom.c  video_custom.h  video_structs.h  vidpipe_creation.c  vidpipe_creation.h  window.c  window.h
tests/: Makefile.am  navy.png.license  test-events.c  test-gst-dtk.c  test-gst-file.c  test-gst-rtp.c  test-gst-tcp.c  test-gst-udp.c  test-gst.c  test-video-custom.c  test-video.c  test.ogv  test1.c
